# Planfoldr

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DECISIONS.md  IDEA.md  LICENSE  PHASE_3.md  PHASE_3_COVERAGE.md  PHASE_4_local.md  PHASE_4_recompile.md  QUESTIONS_PHASE_1.md  README.md  SCORING_VERIFY_THOUGHTS.md  interface.md  pyproject.toml
quests/: template.md  (+37 more)
v1/: ARCHITECTURE.md  IDEA.md  QUESTIONS_PHASE_1.md  README.md  pyproject.toml  requirements.txt
v1/docs/: GETTING_STARTED.md  OLLAMA_MODEL_NOTES.md
v1/docs/phase_1/: IMPLEMENTATION_ORDER.md  MVP_SPEC.md  PHASE_1_COMPLETE.md  SCHEMA_DRAFT.md
v1/docs/phase_2/: PHASE_2_COMPLETE.md  QUESTIONS.md
v1/examples/prompts/: ollama_generate_cli_todo.md  ollama_plan_notes_app.md  ollama_repair_cli_todo.md
v1/examples/scenarios/: cli_todo_app.yaml
v1/examples/scripts/: notes_test_inventory.py
v1/quests/: orchestration_020_ticket_tree_context_orchestration.md  scenario_018_complex_repair_e2e_scenario.md
v1/quests/done/: 001_project_scaffold.md  003_runtime_core.md  005_budget_permission_engine.md  007_verifiers_and_output_validation.md  008_trace_replay_report.md  010_ollama_e2e.md  011_streaming_model_progress.md  013_cycle_membership_in_reports.md  014_investigate_raw_response_and_small_models.md  017_per_run_workspace_isolation.md  019_final_cli_todo_contract_check.md  execution_001_additional_retry.md  (+1 more)
v1/tests/: test_cli.py  test_context_audit.py  test_e2e_stub_scenarios.py  test_guards.py  test_ollama_e2e.py  test_ollama_notes_e2e.py  test_runtime_core.py  test_schema_loader.py  test_tickets.py
(+219 files in other folders)
