[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "planfoldr"
version = "0.1.0"
description = "Deterministic multi-cycle pipeline runtime prototype."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "ollama: optional local Ollama e2e demo",
]
